# Linux_Process_Manager

./: README.md
Linux_process_manager/: Cargo.toml  ui.rs
Linux_process_manager/src/: graph.rs  main.rs  per_process_graph.rs  process.rs  process_log.rs  scripting_rules.rs  ui.rs
